# spec-kit

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md
docs/: README.md  index.md  installation.md  local-development.md  quickstart.md
memory/: constitution.md  constitution_update_checklist.md
scripts/bash/: check-prerequisites.sh  check-task-prerequisites.sh  common.sh  create-new-feature.sh  get-feature-paths.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  check-task-prerequisites.ps1  common.ps1  create-new-feature.ps1  get-feature-paths.ps1  setup-plan.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
