[project]
name = "specify-cli"
version = "0.0.18"
description = "Specify CLI，GitHub Spec Kit 的一部分。一個用於引導您的專案進行規格驅動開發（SDD）的工具。"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
